--- a/.gitignore
+++ b/.gitignore
@@ -249,3 +249,4 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/node,windows,macos,linux,sublimetext,emacs,vim,visualstudiocode
+PITCHME.html
